Added versioning in Devices endpoints
